--- a/View/base-connected.twig
+++ b/View/base-connected.twig
@@ -12,6 +12,7 @@
         {% endblock %}
     </head>
     <body>
+        <a href="/user/logout">Logout</a>
         {% block body %}
         {% endblock %}
     </body>
