--- a/src/View/Admin/index.twig
+++ b/src/View/Admin/index.twig
@@ -2,6 +2,78 @@
 
 {% block title %} Index {{ parent() }}{% endblock %}
 
+{% block css %}
+    {{ parent() }}
+    <style>
+        #btnAdd{
+            margin: 20px 0;
+        }
+        #pagination{
+            text-align: center;
+        }
+    </style>
+{% endblock %}
+
 {% block body %}
-    salutsalut
+    <table class="table table-bordered table-striped">
+        <thead>
+            <tr>
+                <th>Id</th>
+                <th>Token</th>
+                <th>Url</th>
+                <th>Action</th>
+        </thead>
+        <tbody id="tableTbody">
+        </tbody>
+    </table>
+    <div class="col-sm-6">
+        <button id='btnAdd' class="btn btn-primary btn-block">+</button>
+    </div>
+    <div class="col-sm-6" id="pagination">
+    </div>
+{% endblock %}
+
+{% block js %}
+    {{ parent() }}
+    <script src="/bower/twbs-pagination/jquery.twbsPagination.min.js"></script>
+    <script src="/bower/urijs/src/URI.min.js"></script>
+    <script>
+        var tableTbody,
+                pagination;
+
+        function updateTable(page) {
+
+            pagination.twbsPagination('destroy');
+
+            url = URI('/api/routes')
+                    .addSearch('page', page);
+
+            $.getJSON(url).done(function (json) {
+                $.each(json.data.mins, function (key, min) {
+                    id = $('<td>').html(min.id);
+                    tokenurl = URI.expand('/u/{token}', {token: min.token});
+                    token = $('<td>').html($('<a>', {href: tokenurl}).html(min.token));
+                    url = $('<td>').html(min.url);
+                    action = $('<td>');
+                    tableTbody.append($('<tr>').append(id, token, url, action));
+                });
+
+                pagination.twbsPagination({
+                    totalPages: json.data.totalPages + 1,
+                    visiblePages: page + 1,
+                    initiateStartPageClick: false,
+                    onPageClick: function (event, page) {
+                        updateTable(page - 1)
+                    }
+                });
+            });
+        }
+
+
+        $(function () {
+            tableTbody = $('#tableTbody');
+            pagination = $('#pagination');
+            updateTable(0);
+        });
+    </script>
 {% endblock %}
