Change the title of the index of the administration

--- a/src/View/Admin/index.twig
+++ b/src/View/Admin/index.twig
@@ -1,6 +1,6 @@
 {% extends "base-connected.twig" %}
 
-{% block title %} Index {{ parent() }}{% endblock %}
+{% block title %} Administration panel {{ parent() }}{% endblock %}
 
 {% block css %}
     {{ parent() }}
